tests/snapshots/snapshot_tui__piscine_view_initial.snap
---
source: tests/snapshot_tui.rs
expression: "format!(\"{buffer:#?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 120, height: 30 },
    content: [
        "clings ─ piscine  Exercise: hello-01                                                                                    ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "╭Exercice────────────────────────────────────────────────────────────────────────█╭Piscine─────────────────────────────╮",
        "│Write a C program that prints Hello.                                            █│                0/1                 │",
        "│────────────────────────────────────                                            █│                                    │",
        "│concept : stdout                                                                █│●                                   │",
        "│piège   : Forgetting newline                                                    █│                                    │",
        "│                                                                                █│                                    │",
        "│                                                                                █│                                    │",
        "│                                                                                █│                                    │",
        "│                                                                                █│                                    │",
        "│                                                                                █│                                    │",
        "│                                                                                █│                                    │",
        "│                                                                                █│                                    │",
        "│                                                                                █│                                    │",
        "│                                                                                █│                                    │",
        "│                                                                                █│                                    │",
        "│                                                                                █│                                    │",
        "│                                                                                █│                                    │",
        "│                                                                                █│                                    │",
        "│                                                                                █│                                    │",
        "│                                                                                █│                                    │",
        "│                                                                                █│                                    │",
        "│                                                                                █│                                    │",
        "│                                                                                █│                                    │",
        "│                                                                                ║│                                    │",
        "│                                                                                ║│                                    │",
        "╰────────────────────────────────────────────────────────────────────────────────║╰────────────────────────────────────╯",
        "[r] compiler  [h] indice  [n] suivant  [k] précédent  [l] liste  [/] search  [q] quitter                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Rgb(137, 180, 250), bg: Rgb(30, 30, 46), underline: Reset, modifier: BOLD,
        x: 18, y: 0, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: BOLD,
        x: 36, y: 0, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Rgb(137, 180, 250), bg: Rgb(30, 30, 46), underline: Reset, modifier: BOLD,
        x: 9, y: 3, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 83, y: 3, fg: Rgb(137, 180, 250), bg: Rgb(30, 30, 46), underline: Reset, modifier: BOLD,
        x: 90, y: 3, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 81, y: 4, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 83, y: 4, fg: Rgb(166, 227, 161), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 119, y: 4, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Rgb(108, 112, 134), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 37, y: 5, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 81, y: 5, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 83, y: 5, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 119, y: 5, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Rgb(148, 226, 213), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 11, y: 6, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 81, y: 6, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 83, y: 6, fg: Rgb(108, 112, 134), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 84, y: 6, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 119, y: 6, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: Rgb(250, 179, 135), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 11, y: 7, fg: Rgb(108, 112, 134), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 29, y: 7, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 81, y: 7, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 83, y: 7, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 119, y: 7, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 1, y: 8, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 81, y: 8, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 83, y: 8, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 119, y: 8, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 81, y: 9, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 83, y: 9, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 119, y: 9, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 1, y: 10, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 81, y: 10, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 83, y: 10, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 119, y: 10, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 1, y: 11, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 81, y: 11, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 83, y: 11, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 119, y: 11, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 1, y: 12, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 81, y: 12, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 83, y: 12, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 119, y: 12, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 1, y: 13, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 81, y: 13, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 83, y: 13, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 119, y: 13, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 1, y: 14, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 81, y: 14, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 83, y: 14, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 119, y: 14, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 1, y: 15, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 81, y: 15, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 83, y: 15, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 119, y: 15, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 1, y: 16, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 81, y: 16, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 83, y: 16, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 119, y: 16, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 1, y: 17, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 81, y: 17, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 83, y: 17, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 119, y: 17, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 1, y: 18, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 81, y: 18, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 83, y: 18, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 119, y: 18, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 1, y: 19, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 81, y: 19, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 83, y: 19, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 119, y: 19, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 1, y: 20, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 81, y: 20, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 83, y: 20, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 119, y: 20, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 1, y: 21, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 81, y: 21, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 83, y: 21, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 119, y: 21, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 1, y: 22, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 81, y: 22, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 83, y: 22, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 119, y: 22, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 1, y: 23, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 81, y: 23, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 83, y: 23, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 119, y: 23, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 1, y: 24, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 81, y: 24, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 83, y: 24, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 119, y: 24, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 1, y: 25, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 81, y: 25, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 83, y: 25, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 119, y: 25, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 1, y: 26, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 81, y: 26, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 83, y: 26, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 119, y: 26, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 1, y: 27, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 81, y: 27, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 83, y: 27, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 119, y: 27, fg: Rgb(69, 71, 90), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 0, y: 29, fg: Rgb(137, 180, 250), bg: Rgb(30, 30, 46), underline: Reset, modifier: BOLD,
        x: 3, y: 29, fg: Rgb(147, 153, 178), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 12, y: 29, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 14, y: 29, fg: Rgb(137, 180, 250), bg: Rgb(30, 30, 46), underline: Reset, modifier: BOLD,
        x: 17, y: 29, fg: Rgb(147, 153, 178), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 24, y: 29, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 26, y: 29, fg: Rgb(137, 180, 250), bg: Rgb(30, 30, 46), underline: Reset, modifier: BOLD,
        x: 29, y: 29, fg: Rgb(147, 153, 178), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 37, y: 29, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 39, y: 29, fg: Rgb(137, 180, 250), bg: Rgb(30, 30, 46), underline: Reset, modifier: BOLD,
        x: 42, y: 29, fg: Rgb(147, 153, 178), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 52, y: 29, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 54, y: 29, fg: Rgb(137, 180, 250), bg: Rgb(30, 30, 46), underline: Reset, modifier: BOLD,
        x: 57, y: 29, fg: Rgb(147, 153, 178), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 63, y: 29, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 65, y: 29, fg: Rgb(137, 180, 250), bg: Rgb(30, 30, 46), underline: Reset, modifier: BOLD,
        x: 68, y: 29, fg: Rgb(147, 153, 178), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 75, y: 29, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 77, y: 29, fg: Rgb(137, 180, 250), bg: Rgb(30, 30, 46), underline: Reset, modifier: BOLD,
        x: 80, y: 29, fg: Rgb(147, 153, 178), bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
        x: 88, y: 29, fg: Reset, bg: Rgb(30, 30, 46), underline: Reset, modifier: NONE,
    ]
}
